# tsmixer-predictor

./: .gitignore  Makefile  Readme.MD  pyproject.toml
scripts/: download_datasets.sh
tsmixer/: __main__.py  forecast.py  train.py
tsmixer/models/tsmixer_basic/: __init__.py  cnn.py  full_linear.py  rev_in.py  tsmixer.py  tsmixer_rev_in.py
tsmixer/utils/: config.py  data_loaders.py  plot.py
